--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-complete-guide",
+  "name": "ReactJS-Login-App--Practicing-Advanced-Handling-Side-Effects-Reducers-Context-API-",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
